objects/echosign_dev1__SIGN_Settings__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Read_Only_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Contract lookup field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Contract lookup field a read-only agreement field.</inlineHelpText>
        <label>Read Only Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Field_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Additional Fields section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Additional Fields section read-only on an agreement.</inlineHelpText>
        <label>Read Only Field Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Hosted Signing checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Hosted Signing checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Hosted Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Language field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Language field a read-only agreement field.</inlineHelpText>
        <label>Read Only Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Message field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Message field a read-only agreement field.</inlineHelpText>
        <label>Read Only Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Opportunity lookup field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Opportunity lookup field a read-only agreement field.</inlineHelpText>
        <label>Read Only Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Post_Sign_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to display the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Post Sign Options setting.</description>
        <inlineHelpText>Enable this setting to display the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Post Sign Options setting.</inlineHelpText>
        <label>Read Only Post Sign Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Preview or Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Recipient_Signing_Order_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the options for recipient signing order read-only on an agreement</description>
        <inlineHelpText>Enable this setting to make the options for recipient signing order read-only on an agreement</inlineHelpText>
        <label>Read Only Recipient Signing Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Recipients section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Recipients section read-only on an agreement.</inlineHelpText>
        <label>Read Only Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Security_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Security Options section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Security Options section read-only on an agreement.</inlineHelpText>
        <label>Read Only Security Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sender_Signs_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to display the ‘Sender Signs Only’ option as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Sender Signs Only setting.</description>
        <inlineHelpText>Enable this setting to display the ‘Sender Signs Only’ option as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Sender Signs Only setting.</inlineHelpText>
        <label>Read Only Sender Signs Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sender_Signs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;I also need to sign this document&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;I also need to sign this document&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Sender Signs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sign_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</inlineHelpText>
        <label>Read Only Sign Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sign_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Sign Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Signature_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Signature Type field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Signature Type field a read-only agreement field.</inlineHelpText>
        <label>Read Only Signature Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Rename_Agreement_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rename the agreement using the name of the attached document</description>
        <inlineHelpText>Rename the agreement using the name of the attached document</inlineHelpText>
        <label>Rename Agreement with Attachment Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Show_Fields_API_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option to show API Name for every field and relationship of the salesforce objects while setting data mapping and merge mapping</description>
        <inlineHelpText>Enable this option to show API Name for every field and relationship of the salesforce objects while setting data mapping and merge mapping</inlineHelpText>
        <label>Show Fields API Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Wipe_Agreement_Password__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</description>
        <inlineHelpText>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</inlineHelpText>
        <label>Wipe Agreement Password</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Settings</label>
</CustomObject>